# syscare

./: .gitignore  0001-builder-fix-enabling-multiple-kpatch-may-lead-soft-l.patch  0001-upatch-Disable-kmod-compile.patch  0001-upatch-fix-memory-leak.patch  0001-upatch-hijacker-fix-compile-bug.patch  0002-daemon-fix-cannot-get-file-selinux-xattr-when-selinu.patch  0002-upatch-fix-upatch-manage-detach-failure-issue.patch  0003-syscared-fix-syscare-check-command-does-not-check-sy.patch  0003-upatch-remove-upatch-manage-log-file.patch  0004-Change-uuid-type-to-Uuid.patch  0004-syscared-fix-cannot-find-process-of-dynlib-patch-iss.patch  0004-upatch-remove-redudant-log-output.patch  0005-abi-change-uuid-type-from-string-to-uuid-bytes.patch  0005-fix-clippy-warning.patch  0005-syscared-optimize-patch-error-logic.patch  0005-upatch-manage-close-dup-fd.patch  0006-daemon-check-patch-before-patch-restoration.patch  0006-syscared-fix-cannot-find-process-of-dynlib-patch-iss.patch  0006-syscared-optimize-patch-error-logic.patch  0006-syscared-optimize-transaction-creation-logic.patch  0007-syscared-optimize-patch-error-logic.patch  0007-syscared-optimize-transaction-creation-logic.patch  0007-upatch-elf-verification.patch  0007-upatch-manage-optimize-output.patch  0008-common-impl-CStr-from_bytes_with_next_nul.patch  0008-syscared-optimize-transaction-creation-logic.patch  0008-upatch-check-build-id.patch  0008-upatch-manage-optimize-output.patch  0009-README-add-example-for-kernel-module-patch-build.patch  0009-syscared-improve-patch-management.patch  0009-syscared-optimize-patch-error-logic.patch  0009-upatch-manage-optimize-output.patch  0010-daemon-fix-check-build-id-logic.patch  0010-syscared-optimize-patch-error-logic.patch  0010-syscared-optimize-transaction-creation-logic.patch  0010-syscared-stop-activating-ignored-process-on-new-proc.patch  0011-syscared-adapt-upatch-manage-exit-code-change.patch  0011-syscared-optimize-transaction-creation-logic.patch  0011-upatch-diff-fix-a-nullptr-issue.patch  0012-common-impl-CStr-from_bytes_with_next_nul.patch  (+45 more)
builder/: Cargo.toml  README.md  build.rs
builder/src/: args.rs  build_params.rs  lib.rs  logger.rs  main.rs  util.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: args.rs  cli.rs  flock.rs  lib.rs  logger.rs  main.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
daemon/: Cargo.toml  build.rs
daemon/src/: args.rs  logger.rs  main.rs  rpc.rs
manager/cli/: CMakeLists.txt  Cargo.toml  auto-recovery.sh  build.rs  main.sh
metadata-generator/: Cargo.toml  build.rs
metadata-generator/src/: args.rs  main.rs
misc/: CMakeLists.txt  syscare-pre.service  syscare-restore-arm64.service  syscare-restore.service  syscare-upatch.service  syscare.service  upatch.service
misc/patch/: fix_ebpf_read_user_bug_in_4.19.90-2106.3.0.patch
syscare/: Cargo.toml  build.rs
syscare-abi/: Cargo.toml  build.rs
syscare-abi/src/: lib.rs  package_info.rs  patch_info.rs  patch_status.rs  rpc.rs
syscare-build/: Cargo.toml  README.md  build.rs
syscare-build/src/: args.rs  build_params.rs  logger.rs  main.rs
syscare-common/: Cargo.toml  build.rs
syscare-common/src/: lib.rs  macros.rs
syscare/src/: args.rs  logger.rs  main.rs
syscared/: Cargo.toml  build.rs
syscared/src/: args.rs  config.rs  logger.rs  main.rs
upatch/: CMakeLists.txt  Cargo.toml  LICENSE  README.md
upatch-build/: Cargo.toml  build.rs
upatch-build/src/: args.rs  build_root.rs  compiler.rs  compiler_hacker.rs  dwarf.rs  file_relation.rs  file_relations.rs  helper.rs  hijacker.rs  main.rs  pattern_path.rs  project.rs  resolve.rs
upatch-diff/: CMakeLists.txt  create-diff-object.c  elf-common.c  elf-common.h  elf-compare.c  elf-compare.h  elf-correlate.c  elf-correlate.h  elf-create.c  elf-create.h  elf-debug.c  elf-debug.h  elf-insn.c  elf-insn.h  elf-resolve.c  elf-resolve.h  list.h  log.h  running-elf.c  running-elf.h  upatch-dynrela.h  upatch-elf.c  upatch-elf.h  upatch-patch.h
upatch-diff/insn/: inat.c  insn.c
upatch-helper/: CMakeLists.txt  Cargo.toml  build.rs
upatch-helper/helper/: CMakeLists.txt  gnu-as-helper.c  gnu-compiler-helper.c  helper.h
upatch-helper/ko/: CMakeLists.txt  Makefile  cache.c  cache.h  context.c  context.h  ioctl.c  ioctl.h  log.h  main.c  map.c  map.h  records.c  records.h  uprobe.c  uprobe.h  utils.h
upatch-helper/src/: main.rs
upatch-hijacker/hijacker/: CMakeLists.txt  gnu-as-hijacker.c  gnu-compiler-hijacker.c  hijacker.h
upatch-hijacker/ko/: CMakeLists.txt  Makefile  cache.c  cache.h  context.h  ioctl.h  log.h  main.c  map.c  map.h  records.h  uprobe.c  uprobe.h  utils.h
upatch-manage/: CMakeLists.txt  Makefile  ioctl_dev.c  ioctl_dev.h  kernel_compat.c  kernel_compat.h  list.h  log.h  main.c  patch_entity.c  patch_entity.h  patch_load.c  patch_load.h  patch_manage.c  patch_manage.h  process_cache.c  process_cache.h  process_entity.c  process_entity.h  stack_check.c  stack_check.h  symbol_resolve.c  symbol_resolve.h  target_entity.c  target_entity.h  upatch-common.c  upatch-common.h  upatch-elf.c  upatch-elf.h  upatch-manage.c  upatch-patch.c  upatch-patch.h  upatch-process.c  upatch-process.h  upatch-ptrace.c  upatch-ptrace.h  upatch-relocation.c  upatch-relocation.h  upatch-resolve.c  upatch-resolve.h  (+4 more)
upatch-manage/arch/: patch_load.h
upatch/hijacker/: gnu-as-hijacker.c  gnu-cc1-hijacker.c  hijacker.h
upatch/kmod/: CMakeLists.txt  Makefile  common.c  common.h  compiler-args.c  compiler-args.h  compiler.c  compiler.h  compiler_args.c  compiler_args.h  kmod.c  kmod.h  patch-load.c  patch-uprobe.c  patch-uprobe.h  patch.c  patch.h  upatch-ioctl.h  upatch-manage.h
upatch/misc/: upatch.service
upatch/upatch-build/: CMakeLists.txt  Cargo.toml  build.rs  create-diff-object.c  elf-compare.c  elf-correlate.c  elf-create.c  elf-debug.c  elf-debug.h  elf-insn.c  elf-insn.h  list.h  log.h  running-elf.c  running-elf.h  upatch-build  upatch-elf.c  upatch-elf.h
upatch/upatch-compile/: CMakeLists.txt  gnu-as-hijacker.c  gnu-compiler-hijacker.c  upatch-env.h
upatch/upatch-daemon/: Cargo.toml  build.rs
(+731 files in other folders)
