[workspace]
members = [
    "syscare-abi",
    "syscare-common",
    "syscare",
    "syscare-build",
    "syscared",
    "upatch-build",
    "upatch-helper",
    "metadata-viewer",
    "metadata-generator",
]

[profile.release]
opt-level = 's'
debug = true
rpath = false
debug-assertions = false
overflow-checks = false
