[package]
name         = "syscare-build"
version      = "1.1.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare patch build utility"
license      = "MulanPSL-2.0"
edition      = "2021"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../common" }
syscare-abi    = { package = "syscare-abi", path = "../abi" }
anyhow         = { version = "1.0" }
once_cell      = { version = "1.0" }
lazy_static    = { version = "1.4.0" }
log            = { version = "0.4" }
chrono         = { version = "0.4.26" }
parking_lot    = { version = "0.11" }
flexi_logger   = { version = "0.24" }
clap           = { version = "3.2.23", features = ["derive"] }
uuid           = { version = "1.3.0", features = ["v4"] }
serde          = { version = "1.0", features = ["derive"] }
which          = { version = "4.4.0" }
