[package]
name         = "syscare-build"
version      = "1.1.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare patch build utility"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.51"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../common" }
syscare-abi    = { package = "syscare-abi", path = "../abi" }
anyhow         = { version = "1.0" }
once_cell      = { version = "1.14" }
lazy_static    = { version = "1.0" }
log            = { version = "0.4" }
chrono         = { version = "0.4" }
parking_lot    = { version = "0.10" }
flexi_logger   = { version = "0.21" }
clap           = { version = "2.34" }
uuid           = { version = "1.2", features = ["v4"] }
serde          = { version = "1.0", features = ["derive"] }
which          = { version = "4.4" }
