[package]
name         = "syscare-build"
version      = "1.2.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare patch build utility"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../common" }
syscare-abi    = { package = "syscare-abi", path = "../abi" }
anyhow         = { version = "1.0" }
once_cell      = { version = "1.18" }
lazy_static    = { version = "1.0" }
log            = { version = "0.4" }
chrono         = { version = "0.4" }
parking_lot    = { version = "0.11" }
flexi_logger   = { version = "0.24" }
clap           = { version = "3.2", features = ["derive"] }
uuid           = { version = "1.6", features = ["v4"] }
serde          = { version = "1.0", features = ["derive"] }
which          = { version = "4.4" }
ctrlc          = { version = "3.3" }
