[package]
name         = "syscare"
version      = "1.0.2"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare command line interface"
license      = "MulanPSL-2.0"
edition      = "2021"
rust-version = "1.64"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../common" }
syscare-abi    = { package = "syscare-abi", path = "../abi" }
anyhow         = { version = "1.0" }
clap           = { version = "4.3.21", features = ["derive"] }
flexi_logger   = { version = "0.25" }
lazy_static    = { version = "1.0" }
log            = { version = "0.4" }
parking_lot    = { version = "0.12" }
jsonrpc        = { version = "0.16", features = ["simple_uds"] }
function_name  = { version = "0.3" }
