[package]
name         = "syscare"
version      = "1.1.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare command line interface"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../common" }
syscare-abi    = { package = "syscare-abi", path = "../abi" }
anyhow         = { version = "1.0" }
clap           = { version = "2.34" }
flexi_logger   = { version = "0.21" }
function_name  = { version = "0.3" }
jsonrpc        = { version = "0.13", features = ["simple_uds"] }
lazy_static    = { version = "1.0" }
log            = { version = "0.4" }
libc           = { version = "0.2" }
once_cell      = { version = "1.14" }
parking_lot    = { version = "0.10" }
serde          = { version = "1.0", features = ["derive"] }
