[package]
name        = "syscare-common"
version     = "1.0.0-dev"
edition     = "2021"
authors     = ["renoseven <dev@renoseven.net>"]
description = "Syscare common library"
license     = "MulanPSL-2.0"
build       = "build.rs"

[dependencies]
lazy_static = { version = "1.4.0" }
libc        = { version = "0.2.139" }
log         = { version = "0.4.17" }
log4rs      = { version = "1.2.0" }
sha2        = { version = "0.10.6" }
serde       = { version = "1.0", features = ["derive"] }
bincode     = { version = "1.3.3" }
