[package]
name        = "syscare-common"
version     = "1.0.1"
edition     = "2021"
authors     = ["renoseven <dev@renoseven.net>"]
description = "Syscare common library"
license     = "MulanPSL-2.0"
build       = "build.rs"

[dependencies]
anyhow      = { version = "1.0" }
lazy_static = { version = "1.4.0" }
libc        = { version = "0.2.146" }
signal-hook = { version = "0.3.14" }
log         = { version = "0.4" }
log4rs      = { version = "1" }
sha2        = { version = "0.10.6" }
serde       = { version = "1.0", features = ["derive"] }
bincode     = { version = "1.3.3" }
regex       = { version = "1" }
