[package]
name         = "syscared"
version      = "1.1.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare daemon"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-common     = { package = "syscare-common", path = "../common" }
syscare-abi        = { package = "syscare-abi", path = "../abi" }
anyhow             = { version = "1.0" }
once_cell          = { version = "1.14" }
signal-hook        = { version = "0.3" }
lazy_static        = { version = "1.0" }
libc               = { version = "0.2" }
parking_lot        = { version = "0.10" }
indexmap           = { version = "1.8" }
log                = { version = "0.4" }
time               = { version = "0.3" }
flexi_logger       = { version = "0.21", features = ["compress"] }
daemonize          = { version = "0.5" }
clap               = { version = "2.34" }
serde              = { version = "1.0", features = ["derive"] }
inotify            = { version = "0.8" }
jsonrpc-core       = { version = "15.1" }
jsonrpc-derive     = { version = "15.1" }
jsonrpc-ipc-server = { version = "15.1" }

[build-dependencies]
cc = { version = "1.0" }
