[package]
name         = "syscared"
version      = "1.2.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare daemon"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-abi        = { package = "syscare-abi", path = "../abi" }
syscare-common     = { package = "syscare-common", path = "../common" }
anyhow             = { version = "1.0" }
clap               = { version = "3.2", features = ["cargo", "derive"] }
daemonize          = { version = "0.5" }
flexi_logger       = { version = "0.24", features = ["compress"] }
inotify            = { version = "0.9" }
indexmap           = { version = "1.9" }
jsonrpc-core       = { version = "18.0" }
jsonrpc-derive     = { version = "18.0" }
jsonrpc-ipc-server = { version = "18.0" }
lazy_static        = { version = "1.0" }
libc               = { version = "0.2" }
log                = { version = "0.4" }
nix                = { version = "0.26" }
once_cell          = { version = "1.18" }
parking_lot        = { version = "0.11" }
serde              = { version = "1.0", features = ["derive"] }
signal-hook        = { version = "0.3" }

[build-dependencies]
cc = { version = "1.0" }
