# Install service
install(
    FILES
        ${CMAKE_CURRENT_LIST_DIR}/upatch.service
        ${CMAKE_CURRENT_LIST_DIR}/syscare.service
    PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_EXECUTE
        WORLD_READ WORLD_EXECUTE
    DESTINATION
        ${SYSCARE_INSTALL_SERVICE_DIR}
)
