[package]
name         = "syscare-common"
version      = "1.2.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare common library"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
anyhow      = { version = "1.0" }
lazy_static = { version = "1.4" }
log         = { version = "0.4" }
memmap2     = { version = "0.9" }
nix         = { version = "0.26" }
regex       = { version = "1.7" }
sha2        = { version = "0.10" }
serde       = { version = "1.0", features = ["derive"] }
serde_cbor  = { version = "0.11.2" }