[package]
name         = "syscare"
version      = "1.2.2"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare command line interface"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-abi    = { package = "syscare-abi", path = "../syscare-abi" }
syscare-common = { package = "syscare-common", path = "../syscare-common" }
anyhow         = { version = "1.0" }
clap           = { version = "3.2", features = ["cargo", "derive"] }
flexi_logger   = { version = "0.24" }
function_name  = { version = "0.3" }
jsonrpc        = { version = "0.16", features = ["simple_uds"] }
log            = { version = "0.4" }
serde          = { version = "1.0", features = ["derive"] }
