[package]
name         = "syscared"
version      = "1.2.0"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Syscare daemon"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.51"
build        = "build.rs"

[dependencies]
syscare-abi        = { package = "syscare-abi", path = "../syscare-abi" }
syscare-common     = { package = "syscare-common", path = "../syscare-common" }
anyhow             = { version = "1.0" }
once_cell          = { version = "1.14" }
signal-hook        = { version = "0.3" }
lazy_static        = { version = "1.0" }
parking_lot        = { version = "0.11" }
indexmap           = { version = "1.8" }
log                = { version = "0.4" }
time               = { version = "0.3" }
flexi_logger       = { version = "0.21", features = ["compress"] }
daemonize          = { version = "0.5" }
clap               = { version = "2.34" }
serde              = { version = "1.0", features = ["derive"] }
inotify            = { version = "0.9" }
jsonrpc-core       = { version = "18.0" }
jsonrpc-derive     = { version = "18.0" }
jsonrpc-ipc-server = { version = "18.0" }
nix                = { version = "0.25" }

[build-dependencies]
cc = { version = "1.0" }
