[package]
name         = "upatch-build"
version      = "1.2.0"
authors      = ["lizongwu@huawei.com"]
description  = "upatch-build tool"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.51"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../syscare-common" }
anyhow         = { version = "1.0" }
clap           = { version = "2.34" }
gimli          = { version = "0.26" }
lazy_static    = { version = "1.0" }
log            = { version = "0.4" }
memmap2        = { version = "0.9" }
memoffset      = { version = "0.6" }
object         = { version = "0.27", features = ["write"] }
serde          = { version = "1.0", features = ["derive"] }
typed-arena    = { version = "2.0" }
which          = { version = "4.4" }
jsonrpc        = { version = "0.16", features = ["simple_uds"] }
function_name  = { version = "0.3" }
ctrlc          = { version = "3.1" }
