[package]
name         = "upatch-build"
version      = "1.2.1"
authors      = ["lizongwu@huawei.com"]
description  = "Upatch build utility"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
syscare-common = { package = "syscare-common", path = "../syscare-common" }
anyhow         = { version = "1.0" }
clap           = { version = "3.2", features = ["cargo", "derive"] }
ctrlc          = { version = "3.3" }
flexi_logger   = { version = "0.24" }
function_name  = { version = "0.3" }
gimli          = { version = "0.26" }
indexmap       = { version = "1.9" }
jsonrpc        = { version = "0.16", features = ["simple_uds"] }
lazy_static    = { version = "1.0" }
log            = { version = "0.4" }
memmap2        = { version = "0.9" }
memoffset      = { version = "0.7" }
object         = { version = "0.29", features = ["write"] }
serde          = { version = "1.0", features = ["derive"] }
typed-arena    = { version = "2.0" }
which          = { version = "4.4" }
