[package]
name         = "upatch-helper"
version      = "1.2.2"
authors      = ["renoseven <dev@renoseven.net>"]
description  = "Upatch compiler helper"
license      = "MulanPSL-2.0"
edition      = "2018"
rust-version = "1.60"
build        = "build.rs"

[dependencies]
anyhow         = { version = "1.0" }
uuid           = { version = "0.8", features = ["v4"] }
