# SPDX-License-Identifier: GPL-2.0

set(UPATCH_MANAGE_KMOD "upatch_manage.ko")

if (DEFINED ENABLE_GCOV)
    set(ENABLE_GCOV "ENABLE_GCOV=1")
endif()

if (DEFINED KERNEL_VERSION)
    set(KERNEL_BUILD_DIR /lib/modules/${KERNEL_VERSION}/build)
    set(KMOD_CLEAN_CMD ${CMAKE_MAKE_PROGRAM} clean KERNEL_SRC=${KERNEL_BUILD_DIR} V=1)
    set(KMOD_BUILD_CMD ${CMAKE_MAKE_PROGRAM} KERNEL_SRC=${KERNEL_BUILD_DIR} MODULE_VERSION=${BUILD_VERSION} ENABLE_GCOV=${ENABLE_GCOV} V=1)
else()
    set(KMOD_CLEAN_CMD ${CMAKE_MAKE_PROGRAM} clean V=1)
    set(KMOD_BUILD_CMD ${CMAKE_MAKE_PROGRAM} MODULE_VERSION=${BUILD_VERSION} ENABLE_GCOV=${ENABLE_GCOV} V=1)
endif()

add_custom_target(upatch-manage ALL
    COMMAND           ${KMOD_CLEAN_CMD}
    COMMAND           ${KMOD_BUILD_CMD}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

install(
    FILES
        ${UPATCH_MANAGE_KMOD}
    PERMISSIONS
        OWNER_WRITE OWNER_READ
        GROUP_READ
        WORLD_READ
    DESTINATION
        ${SYSCARE_LIBEXEC_DIR}
)
